# rkd-dbt-unified-mcp

./: .env.example  .gitignore  Dockerfile  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: clients.yaml
scripts/: diagnose_clients.py
src/dbt_mcp/: client_registry.py  dbt_client.py  server.py
src/dbt_mcp/tools/: jobs.py  lineage.py  models.py  sources.py
tests/: conftest.py  test_jobs.py  test_lineage.py  test_models.py  test_registry.py  test_sources.py
